#file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_executable(firstCPP_ch1 ch1/hello_world.cpp)
add_executable(pointer_run ch1/pointer.cpp)
add_executable(heap_run ch1/heap.cpp)
add_executable(mypet_run ch1/mypet.cpp)
add_executable(animal_run ch2/animal.cpp)
add_executable(overloading_ex_run ch2/overloading.cpp)

add_library(Geometry STATIC ch2/Geometry.cpp)
target_include_directories(Geometry PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(Geometry PUBLIC Point Line)
# For 열혈

add_library(AccountRepository STATIC enthusiasm/banking/command/domain/repository/AccountRepository.cpp)
target_include_directories(AccountRepository PUBLIC enthusiasm/common)
add_library(BankService STATIC enthusiasm/banking/command/service/BankService.cpp)
target_include_directories(BankService PUBLIC enthusiasm/common)
add_library(RacingCar STATIC enthusiasm/struct/RacingCar.cpp)
add_library(Car STATIC enthusiasm/class/Car.cpp)
add_library(Rectangle STATIC enthusiasm/class/Rectangle.cpp)
add_library(Enthusiasm_Point STATIC enthusiasm/class/Point.cpp)
add_library(FruitSeller STATIC enthusiasm/class/FruitSeller.cpp)
add_library(FruitBuyer STATIC enthusiasm/class/FruitBuyer.cpp)
add_library(Encaps_1 STATIC enthusiasm/class/Encaps_1.cpp)
add_library(Encaps_2 STATIC enthusiasm/class/Encaps_2.cpp)
#add_dependencies(Geometry DynamicArray Line Point)