#file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_executable(firstCPP_ch1 ch1/hello_world.cpp)
add_executable(pointer_run ch1/pointer.cpp)
add_executable(heap_run ch1/heap.cpp)
add_executable(mypet_run ch1/mypet.cpp)
add_executable(animal_run ch2/animal.cpp)
add_executable(overloading_ex_run ch2/overloading.cpp)

add_library(Geometry STATIC ch2/Geometry.cpp)
target_include_directories(Geometry PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_link_libraries(Geometry PUBLIC Point Line)
# For 열혈

add_library(AccountRepository STATIC enthusiasm/banking/command/domain/repository/AccountRepository.cpp)
target_include_directories(AccountRepository PUBLIC enthusiasm/common)
add_library(BankService STATIC enthusiasm/banking/command/service/BankService.cpp)
target_include_directories(BankService PUBLIC enthusiasm/common)
add_library(Account_Entity STATIC enthusiasm/banking/command/domain/entity/Account.cpp enthusiasm/banking/command/domain/entity/Account.h)
add_library(NormalAccount_Entity STATIC enthusiasm/banking/command/domain/entity/NormalAccount.cpp enthusiasm/banking/command/domain/entity/NormalAccount.h)
add_library(HighCreditAccount_Entity STATIC enthusiasm/banking/command/domain/entity/HighCreditAccount.cpp enthusiasm/banking/command/domain/entity/HighCreditAccount.h)

add_library(Event_Provider STATIC enthusiasm/banking/infra/EventProvider.cpp)
add_library(ViewModelEventListener STATIC enthusiasm/banking/infra/ViewModelEventListener.cpp)
target_include_directories(ViewModelEventListener PUBLIC enthusiasm/banking/infra/includes)

add_library(MainMenu_ViewModel STATIC enthusiasm/banking/ui/viewmodel/MainMenuViewModel.cpp)
add_library(MakeAccountForm_ViewModel STATIC enthusiasm/banking/ui/viewmodel/MakeAccountFormViewModel.cpp)
add_library(DepositForm_ViewModel STATIC enthusiasm/banking/ui/viewmodel/DepositFormViewModel.cpp)
add_library(WithdrawForm_ViewModel STATIC enthusiasm/banking/ui/viewmodel/WithdrawFormViewModel.cpp)
add_library(UserListForm_ViewModel STATIC enthusiasm/banking/ui/viewmodel/UserListFormViewModel.cpp)


add_library(MainMenu STATIC enthusiasm/banking/ui/view/MainMenu.cpp)
add_library(MakeAccountForm STATIC enthusiasm/banking/ui/view/MakeAccountForm.cpp)
add_library(DepositForm STATIC enthusiasm/banking/ui/view/DepositForm.cpp)
add_library(WithdrawForm STATIC enthusiasm/banking/ui/view/WithdrawForm.cpp)
add_library(UserListForm STATIC enthusiasm/banking/ui/view/UserListForm.cpp)
target_link_libraries(MainMenu PUBLIC ViewModelEventListener)
target_link_libraries(MakeAccountForm PUBLIC ViewModelEventListener)
target_link_libraries(DepositForm PUBLIC ViewModelEventListener)
target_link_libraries(WithdrawForm PUBLIC ViewModelEventListener)
target_link_libraries(UserListForm PUBLIC ViewModelEventListener)
target_include_directories(MainMenu PUBLIC enthusiasm/banking/ui/includes)
target_include_directories(MakeAccountForm PUBLIC enthusiasm/banking/ui/includes)
target_include_directories(DepositForm PUBLIC enthusiasm/banking/ui/includes)
target_include_directories(WithdrawForm PUBLIC enthusiasm/banking/ui/includes)
target_include_directories(UserListForm PUBLIC enthusiasm/banking/ui/includes)

#target_include_directories(Account_Entity PUBLIC enthusiasm/common)
add_library(RacingCar STATIC enthusiasm/struct/RacingCar.cpp)
add_library(Car STATIC enthusiasm/class/Car.cpp)
add_library(Rectangle STATIC enthusiasm/class/Rectangle.cpp)
add_library(Enthusiasm_Point STATIC enthusiasm/class/Point.cpp)
add_library(FruitSeller STATIC enthusiasm/class/FruitSeller.cpp)
add_library(FruitBuyer STATIC enthusiasm/class/FruitBuyer.cpp)
add_library(Encaps_1 STATIC enthusiasm/class/Encaps_1.cpp)
add_library(Encaps_2 STATIC enthusiasm/class/Encaps_2.cpp)
add_library(Constructor_1 STATIC enthusiasm/class/Constructor_1.cpp)
add_library(Destructor STATIC enthusiasm/class/Destructor.cpp)
add_library(ObjArr STATIC enthusiasm/class/ObjArr.cpp)
add_library(SelfRef STATIC enthusiasm/class/SelfRef.cpp)
add_library(Custom_String STATIC enthusiasm/string/StringClass.cpp)
#add_library(PointTemplate STATIC enthusiasm/template/PointTemplate.cpp)
#add_library(Point_Temp STATIC enthusiasm/template/Point.cpp)
#add_dependencies(Geometry DynamicArray Line Point)